Remove unused widgets from jpeg export dialog

The preview checkbox was already hidden, and I'd never even noticed
the grayed out 100KB label -- but that was also never implemented.

At this moment, I don't see it getting implemented either, so remove
these widgets altogether.

BUG:328074